--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1878,7 +1878,7 @@ button.back-to-top {
   background-position: center;
 }
 
-@key /*========================
+@keyfr /*========================
 	13. INNER CONTENT CSS
 =========================*/
 /* About Section */
