--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1874,7 +1874,8 @@ button.back-to-top {
   top: 0;
   opacity: 1;
   z-index: 999999999;
-  background-image: url(../../../assets/images/favicon.png);
+  background-image: url(../../../assets/images/loadinganimation.gif);
+  background-size: 300px;
   background-repeat: no-repeat;
   background-size: 60px;
   background-position: center;
